--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <img src="" alt="">
             <ul type="none">
                 <li><a href="#home">HOME </a></li>
-                <li><a href="#about">TRAINING & RESOURCE CENTRE</a></li>
-                <li><a href="#skills">LEARN</a></li>
-                <li><a href="#resume">RESOURCES</a></li>
-                <li><a href="#contact">GET HELP</a></li>
+                <li><a href="#about">ABOUT</a></li>
+                <li><a href="#skills">SKILLS</a></li>
+                <li><a href="#resume">RESUME</a></li>
+                <li><a href="#contact">CONTACT</a></li>
             </ul>
         </div>
         <div class="counterintro">
